hphp/hack/test/typecheck/typing_fail_inherit2.php.rust_elab.exp
File "typing_fail_inherit2.php", line 18, characters 3-30:
Redeclared method `Baz::bar` (Parsing[1002])
File "typing_fail_inherit2.php", line 18, characters 19-21:
Method name already bound: `bar` (Naming[2033])
File "typing_fail_inherit2.php", line 18, characters 19-21:
Argument already bound: `bar` (Naming[2036])
File "typing_fail_inherit2.php", line 16, characters 7-9:
This class overrides some members with a different staticness (Typing[4091])
  File "typing_fail_inherit2.php", line 13, characters 19-21:
  The method `bar` is declared as non-static here
  File "typing_fail_inherit2.php", line 17, characters 26-28:
  But it conflicts with an inherited static declaration here
